team-app/main/default/objects/Pipeline_Saved_View__c/Pipeline_Saved_View__c.object-meta.xml
<CustomObject>
    <description>Saved Pipeline Review filters, sort, and columns. Deal_List_View__c cannot carry a shared flag.</description>
    <label>Pipeline Saved View</label>
    <pluralLabel>Pipeline Saved Views</pluralLabel>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>