team-app/main/default/objects/Pipeline_Saved_View__c/fields/Definition_JSON__c.field-meta.xml
<CustomField>
    <fullName>Definition_JSON__c</fullName>
    <description>Filters, sort, and columns. A view saved before a filter is added must still load.</description>
    <inlineHelpText>Versioned JSON {"v":1,...}. Unknown keys are ignored on read.</inlineHelpText>
    <label>Definition JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>