team-app/main/default/objects/Pipeline_Saved_View__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <description>Per-user default saved view. Service clears siblings on save.</description>
    <inlineHelpText>Loads on open. One default per user, enforced in service code.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>