team-app/main/default/objects/Pipeline_Saved_View__c/fields/Is_Shared__c.field-meta.xml
<CustomField>
    <fullName>Is_Shared__c</fullName>
    <description>Share-to-team flag. Editing another user's view is owner-only.</description>
    <inlineHelpText>Visible to the rest of the team, read-only.</inlineHelpText>
    <label>Shared</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>