team-app/main/default/objects/Pipeline_Saved_View__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>User-controlled list order.</description>
    <inlineHelpText>Manual reorder position.</inlineHelpText>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>