team-app/main/default/objects/Pipeline_Saved_View__c/fields/View_Name__c.field-meta.xml
<CustomField>
    <fullName>View_Name__c</fullName>
    <description>User-facing name for the saved view.</description>
    <inlineHelpText>Display name, 80 characters.</inlineHelpText>
    <label>View Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>